--- a/index.html
+++ b/index.html
@@ -4,10 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <title>Figmaland</title>
+    <script src="https://kit.fontawesome.com/168fcb12e1.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="img/heart.svg" type="image/x-icon">
 </head>
 <body>
+    <header id="header">
+        <div class="header">
+            <div class="container">
+                <nav class="nav-main">
+                    <ul class="nav-main__list">
+                        <li class="nav-main__item">
+                            <a href="#">Home</a>
+                            <a href="#">Product</a>
+                            <a href="#">Pricing</a>
+                            <a href="#">About</a>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                    <!-- <div class="header-logo">
+                        <img src="img/Rectangle 4.svg" alt="logo">
+                    </div> -->
+                    <div class="socials">
+                        <a href="#"><i class="fa-brands fa-twitter fa-2xl" style="color: #3b5998 ;"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook fa-2xl style="color: #3b5998 ;"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin fa-2xl" style="color: #3b5998 ;"></i></i></a>
+                    </div>
+                </nav>
+                <div class="header-text">
+                    <div class="header-title">
+                        <h1>The best products start with Figma</h1>
+                    </div>
+                    <div class="header-subtitle">
+                        <h4>Most calendars are designed for teams. Slate is designed for freelancers</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main id="main">
+        <div class="container">
+            <div class="features">
+                <h2 class="features-title">Features</h2>
+                <h4 class="features-subtitle">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+                <div class="feature-style1">
+                    <img class="feature-style-img" src="img/CircleSquare.svg" alt="CircleSquare">
+                    <h3 class="feature-style-title">OpenType features Variable fonts</h3>
+                    <p class="feature-style-text">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                </div>
+                <div class="features-style2">
+                    <img class="feature-style-img" src="img/pencil.svg" alt="Pencil">
+                    <h3 class="feature-style-title">Design with real data</h3>
+                    <p class="feature-style-text">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                </div>
+                <div class="features-style3">
+                    <img class="feature-style-img" src="img/brush.svg" alt="brush">
+                    <h3 class="feature-style-title">Fastest way to take action</h3>
+                    <p class="feature-style-text">Slate helps you see how many more days you need to work to reach your financial goal.</p>
+                </div>
+                <div class="features-screen">
+                    <img class="features-screen1" src="img/screen.jpg" alt="screen">
+                </div>     
+            </div>
+            <div class="hero">
+                <div class="hero-left">
+                    <h2 class="hero-title">Fastest way to organize</h2>
+                    <h4 class="hero-subtitle">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+                    <button class="hero-btn">Try For Free</button>
+                </div>
+                <div class="hero-right">
+                    <img src="img/laptop.png" alt="laptop">
+                </div>
+            </div>
+            <div class="wooman">
+                <div class="wooman-left">
+                    <img src="img/wooman-hahahaha.png" alt="wooman">
+                </div>
+                <div class="hero-right">
+                    <h3>At your fingertips</h3>
+                    <h2>Lightning fast prototyping </h2>
+                    <h3>Subscribe to our Newsletter</h3>
+                    <p>Available exclusivery on Figmaland</p>
+                    <input type="email">
+                </div>
+            </div>
+        </div>
+    </main>
+   
+
+
+
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
 </html>
