--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div> -->
                     <div class="socials">
                         <a href="#"><i class="fa-brands fa-twitter fa-2xl" style="color: #3b5998 ;"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook fa-2xl style="color: #3b5998 ;"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook fa-2xl" style="color: #3b5998 ;"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin fa-2xl" style="color: #3b5998 ;"></i></i></a>
                     </div>
                 </nav>
@@ -38,6 +38,7 @@
                     <div class="header-subtitle">
                         <h4>Most calendars are designed for teams. Slate is designed for freelancers</h4>
                     </div>
+                    <button class="hero-btn">Try For Free</button>
                 </div>
             </div>
         </div>
@@ -80,20 +81,256 @@
                 <div class="wooman-left">
                     <img src="img/wooman-hahahaha.png" alt="wooman">
                 </div>
-                <div class="hero-right">
+                <div class="hero-wooman">
                     <h3>At your fingertips</h3>
                     <h2>Lightning fast prototyping </h2>
                     <h3>Subscribe to our Newsletter</h3>
                     <p>Available exclusivery on Figmaland</p>
-                    <input type="email">
+                    <form>
+                        <label for="email">Електронна пошта:</label><br>
+                        <input type="email" id="email" name="email" placeholder="Your Email" required><br>
+                        <input type="submit" value="Subscribe">
+                    </form> 
+                </div>
+            </div>
+            <div class="Partners">
+                <h2 class="partners-title">Partners</h2>
+                <h4 class="partners-subtitle">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+                <div class="partners-wrap">
+                    <div class="partners-logo google">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/google.svg" alt="google">
+                    </div>
+                    <div class="partners-logo amazon">
+                        
+                        <img src="img/amazon.svg" alt="amazon">
+                    </div>
+                    <div class="partners-logo microsoft">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/microsoft.svg" alt="microsoft">
+                    </div>
+                    <div class="partners-logo uber">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/uber.svg" alt="uber">
+                    </div>
+                    <div class="partners-logo dropbox">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/dropbox.svg" alt="dropbox">
+                    </div>
+                    <div class="partners-logo google">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/google.svg" alt="google">
+                    </div>
+                    <div class="partners-logo uber">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/uber.svg" alt="uber">
+                    </div>
+                    <div class="partners-logo amazon">
+                        <h5 class="client-name">Client Name</h5>
+                        <img src="img/amazon.svg" alt="amazon">
+                    </div>
+                </div>
+                <button class="hero-btn">Try For Free</button>
+            </div>
+            <div class="Testimonials">
+                <h2 class="Testimonials-title">Testimonials</h2>
+                <img src="img/ibm.svg" alt="IBM">
+                <h4 class="Testimonials-subtitle">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</h4>
+                <img src="img/man-hahahaha.png" alt="man">
+                <div class="testimonials-wrap">
+                    <h5 class="organize">Organize across</h5>
+                    <a class="designer" href="#">Ui designer</a>
+                </div>
+                <button class="Testimonials-btn">More Testimonials</button>
+            </div>
+            <div class="pricing">
+                <h2 class="pricing-title">Pricing</h2>
+                <h4 class="pricing-subtitle">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+                <div class="zero">
+                    <div class="pricing-description">
+                        <h3 class="plan">FREE</h3>
+                        <h5 class="description">Organize across all apps by hand</h5>
+                    </div>
+                    <div class="price">
+                        <h1>0</h1>
+                        <h3>$</h3>
+                        <h5>Per Month</h5>
+                    </div>  
+                    <div class="pricing-feature">
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                    </div>  
+                    <button class="pricing-btn">Order Now</button>
+                </div>
+                <div class="standart">
+                    <div class="pricing-description">
+                        <h3 class="plan2">STANDART</h3>
+                        <h5 class="description2">Organize across all apps by hand</h5>
+                    </div>
+                    <div class="price">
+                        <h1>10</h1>
+                        <h3>$</h3>
+                        <h5>Per Month</h5>
+                    </div>  
+                    <div class="pricing-feature">
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                    </div>  
+                    <button class="pricing-btn2">Order Now</button>
+                </div>
+                <div class="business">
+                    <div class="pricing-description">
+                        <h3 class="plan">BUSINESS</h3>
+                        <h5 class="description">Organize across all apps by hand</h5>
+                    </div>
+                    <div class="price">
+                        <h1>99</h1>
+                        <h3>$</h3>
+                        <h5>Per Month</h5>
+                    </div>  
+                    <div class="pricing-feature">
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                        <span>Pricing Feature</span>
+                    </div>  
+                    <button class="pricing-btn">Order Now</button>
+                </div>
+            </div>
+            <div class="contact-us">
+                <h2 class="contact-title">Contact Us</h2>
+                <h4 class="contact-subtitle">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+                <div class="contact-wrapper">
+                    <div class="contact">
+                        <form>
+                            <label for="name"></label>
+                            <input type="text" id="name" name="name" placeholder="Your Name" required>
+                            <label for="email"></label>
+                            <input type="email" id="email" name="email" placeholder="Your Email" required>
+                            <label for="message"></label>
+                            <textarea id="message" name="message" placeholder="Your Message"></textarea>
+                            <input type="submit" value="Відправити">
+                        </form>
+                        <div class="contack-svg">
+                            <div class="map">
+                                <img src="img/map.svg" alt="map">
+                                <a href="https://goo.gl/maps/LDYWprLkChPfdGWv7" target="_blank">6386 Spring St undefined Anchorage, Georgia 12473 United States</a>
+                            </div>
+                            <div class="phone">
+                                <img src="img/phone.svg" alt="phone">
+                                <a href="tel:(843) 555-0130">(843) 555-0130</a>
+                            </div>
+                            <div class="email">
+                                <img src="img/email.svg" alt="email">
+                                <a href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
+                            </div>    
+                        </div>
+                        <div class="map-screen">
+                            <a href="https://goo.gl/maps/LDYWprLkChPfdGWv7" target="_blank"><img src="img/map screen.jpg" alt="map"></a>
+                        </div>
+                        <div class="socials">
+                            <a href="#"><i class="fa-brands fa-twitter fa-2xl" style="color: #00acee ;"></i></a>
+                            <a href="#"><i class="fa-brands fa-facebook fa-2xl" style="color: #3b5998 ;"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin fa-2xl" style="color: #0e76a8 ;"></i></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-   
-
-
-
+    <footer id="footer">
+        <div class="container">
+            <div class="footer">
+                <div class="footer-nav-wrap">
+                    <div class="footer-nav">
+                        <h3 class="footer-nav-title">Pages</h3>
+                        <ul class="footer-nav-list">
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Home</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Product</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">About</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                        <h3 class="footer-nav-title">Tomothy</h3>
+                        <ul class="footer-nav-list">
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Eleanor Edwards</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Ted Robertson</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Annette Russell</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Jennie Mckinney</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Gloria Richards</a>
+                            </li>
+                        </ul>
+                        <h3 class="footer-nav-title">Jane Black</h3>
+                        <ul class="footer-nav-list">
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Philip Jones</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Product</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Colleen Russell</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Marvin Hawkins</a>
+                            </li>
+                            <li class="footer-nav-item">
+                                <a class="footer-nav-link" href="#">Bruce Simmmons</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-about">
+                    <div class="footer-adress">
+                        <img src="img/footer-map.svg" alt="map">
+                        <a href="https://goo.gl/maps/nWRqsTvmYS1W3wkM7">7480 Mockingbird Hill undefined</a>
+                    </div>
+                    <div class="footer-phone">
+                        <img src="img/footer-phone.svg" alt="map">
+                        <a href="tel:(239) 555-0108">(239) 555-0108</a>
+                    </div>
+                    <div class="socials">
+                        <a href="#"><i class="fa-brands fa-twitter fa-2xl" style="color: #fff ;"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook fa-2xl" style="color: #fff ;"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin fa-2xl" style="color: #fff ;"></i></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+
+    <style>
+        #footer{
+            background-color: #252B42;
+        }
+    </style>
+
 </body>
 </html>
